--- a/Data visualization/Area-Plots-Histograms-and-Bar-Charts.ipynb
+++ b/Data visualization/Area-Plots-Histograms-and-Bar-Charts.ipynb
@@ -3629,9 +3629,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python-data-science",
    "language": "python",
-   "name": "python3"
+   "name": "python-data-science"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3643,7 +3643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.10"
   },
   "widgets": {
    "state": {},
